First half of the sixth chapter finished and pending on corrections. Halfway through the final push. Starting to struggle a little, but I'll push through.

--- a/0_frontmatter/acknowledgement.tex
+++ b/0_frontmatter/acknowledgement.tex
@@ -3,10 +3,11 @@
 
 \begin{acknowledgementslong} %uncommenting this line, gives a different acknowledgements heading
 %\begin{acknowledgements}      %this creates the heading for the acknowlegments
-%Podría escribir que intentaré ser breve, pero quien esté leyendo esto seguramente me conoce lo suficiente para saber que no está en mi naturaleza. Y qué suerte que sea así, porque significa que tengo mucho que agradecer.
+%
 %%
+%% Según la RAE, serendipia significa \textit{circunstancia de encontrar por casualidad algo que no se buscaba}. Esta tesis es un resultado de la serendipia, de descubrir la increíble historia que desentrañaba un inocente email. Cuando Emilio me ofreció unirme al Ontology Engineering Group como parte de un pequeño proyecto, lo últim
 
-%% El mayor de mis agradecimientos es sin duda para mis directores: Emilio y Daniel. Si ya fue un privilegio teneros como profesores, teneros como directores ha sido un verdadero regalo. 
+%% El mayor de mis agradecimientos es sin duda para mis directores: Emilio y Daniel. Si ya fue un privilegio teneros como profesores, teneros como directores ha sido un verdadero regalo. En primer lugar, gracias por confiar en mí en todo momento, y por 
 
 
 %%HAY QUE AGRADECER  AL GRUPO DE FRANK, SOBRETODO A PETER
@@ -14,18 +15,27 @@
 %Sara, gracias por tu generosidad, y por haber sido mi hogar lejos de casa. 
 
 %%A LA GENTE DEL LABO QUE NO ESTÁ, LAS CHICAS DE LA PISCINA DE TERUEL
-
+%% 
 %%A LOS AMIGOS QUE HICISTE, A LOS QUE RECUPERASTE
+%%
 
-%A IRENE
+%% En primer lugar y muy especialmente, gracias a María Poveda. 
 
-% Por supuesto, gracias a Tamara, por ser la hermana que la vida me regaló. Gracias por ser, por estar de forma incondicional, por tu infinita generosidad y por darme una segunda familia y unos amigos maravillosos. Una vida entera va a ser corta para agradecerte tanto.
+%% Gracias también a Pablo, por compartir conmigo mucho de tu tiempo, tus buenos consejos y, sobretodo, tu sentido del humor.  
 
-%A mi abuela Geni, que aunque
+%En primer lugar, gracias a Tamara, por ser la hermana que la vida me regaló. Gracias por ser, por estar de forma incondicional, por tu infinita generosidad y por darme una segunda familia y unos amigos maravillosos. Me has dado tanto que una vida va a ser corta para agradecértelo. Muchas gracias también a Isma, que lleva acompañándome en este periplo de la universidad (y de la vida) desde el primer día que llegué aquí. Gracias por tus miles de historias, por tu infinito apoyo y, en definitiva, por ser único como eres.
 
-%A mi madre, Geles. Siempre dices que tener un hijo significa llevarte cien disgustos por cada orgullo. Espero que este orgullo compense todos los disgustos que te haya dado (y los que seguro te seguiré dando). Gracias por enseñarnos a hacer del humor no una forma de vida, pero sí de supervivencia.    
+%Gracias también a mis amigos: los que están, los que volvieron, y los que se quedaron. A Jaime por seguir ayudándome a desentrañar los misterios de la ciencia, y por llevar más de una década aguantando mi incesante verborrea. A Marta y a Sandra por su generosidad y por ser las dos maravillosas mujeres que son. A Quique, por 
 
-%Y finalmente, como manda la tradición, estas últimas líneas son para el que es, y será siempre el hombre de mi vida, y de lo que haya después. A mi padre, Alberto, que además de su nariz y su pasión por la música, me enseñó que relativizar los problemas es el primer paso para resolverlos, y la importancia que tiene disfrutar de la vida. Qué largo se hace el camino sin ti, y cuánto me hubiera gustado seguir recorriéndolo de tu mano. Allí donde me estés esperando, ojalá estés orgulloso. 
+
+%Gracias a mi familia, a toda ella: a los Amadores, a los Domínguez y a los Torrijos. Especialmente, gracias a mi prima Irene, por abrirme las puertas de este mundo y por ser un referente para mí tanto en lo profesional como en lo personal. No hubiera podido emprender mi camino si tú no hubieras dejado tus huellas. A mi tío (y lo más importante,mi  padrino) Juan y a mi tía Mariu, por cuidarme, mimarme y animarme siempre. También a mis hermanos, Javi y Jorge, que para mí siempre serán mis pequeños por mucho que crezcan. 
+
+
+%Sobretodo quiero darle las gracias las dos mujeres que han hecho de mí la persona que soy hoy, de las que tanto he aprendido, y de las que seguiré aprendiendo toda la vida. En primer lugar, gracias a mi abuela, a mi Geni, por todo su cariño, por cuidarme todos estos años y por apoyarme siempre incondicionalmente, aún sin saber exactamente en qué. 
+
+%Especialmente gracias a mi madre, Geles. Gracias por enseñarme que el humor a veces es lo único que nos ayuda a enfrentarnos a la vida y por seguir (y sacarnos) siempre adelante por difícil que sea. Siempre dices que tener un hijo significa llevarte cien disgustos por cada orgullo que recibes. Espero que este orgullo compense todos los disgustos que te haya dado (y los que seguro te seguiré dando). 
+
+%Por último, gracias a mi estrella, cuya presencia y ausencia siempre me acompañan. A mi padre Alberto, que además de su nariz y su amor por la música, me enseñó que relativizar los problemas es el primer paso para resolverlos, y que la vida es un viaje que hay que disfrutar. Qué largo es el camino sin ti, y cuánto me hubiera gustado poder seguir recorriéndolo contigo cerca. Allí donde me estés esperando, ojalá estés orgulloso. 
 
 %Me gustaría añadir los versos de la canción de Xoel López "Lodo", porque la he escuchado durante el proceso de escritura bastante y es como un buen recordatorio de que esto es el final del camino y de que es una etapa que abre las puertas de algo nuevo y bonito
 % 
