--- a/0_frontmatter/glossary.tex
+++ b/0_frontmatter/glossary.tex
@@ -9,15 +9,22 @@
 \chapter{Acronyms}
 % \markboth{\MakeUppercase{\nomname}}{\MakeUppercase{\nomname}}
 \begin{description}
+\item[AI]{Artificial Intelligence}
+\item[BBHOS]{Black-Box Hyper-Personalization Online System(s)}
 \item[CBR]{Case-Based Reasoning}
+\item[CNN]{Convolutional Neural Network}
 \item[DL]{Deep Learning}
 \item[GPU]{Graphical Processing Unit}
+\item[GVID]{Generated Virtual Identity}
 \item[KBS]{Knowledge-Based System(s)}
 \item[KGC]{Knowledge Graph Completion}
 \item[KGE]{Knowledge Graph Embedding(s)}
+\item[MAS]{Multi-Agent System}
 \item[NER]{Named Entity Recognition}
 \item[NLP]{Natural Language Processing}
+\item[OOKB]{Out-of-Knowledge-Base}
 \item[TF-IDF]{Term Frequency-Inverse Document Frequency}
+\item[UVID]{User Virtual Identity}
 
 \end{description}
 % ----------------------- contents from here ------------------------
