--- a/2_stateoftheart/stateofart.tex
+++ b/2_stateoftheart/stateofart.tex
@@ -73,7 +73,7 @@ After combining the taxonomies presented in \cite{hopgood_2009_knowledge-based} 
 \section{Neurosymbolic Systems} \label{sec:sota_neurosymbolic_systems}
 \textit{Neurosymbolic} (or hybrid learning) AI describes a set of proposed methods designed to integrate analogous AI models, generating new approaches that combine the benefits of both models under a unified framework. As \cite{valiant_three_2003} claimed: ``\textit{The aim is to identify a way of looking at and manipulating commonsense knowledge that is consistent with and can support what we consider to be the two most fundamental aspects of intelligent cognitive behaviour: the ability to learn from experience and the ability to reason from what has been learned"}. Several efforts have been conducted on this direction, proposing strategies, categorizations, and studying the limitations of this integration. 
 
-\subsection{Motivation}
+\subsection{Motivation}\label{2_sec:subsec:motivation}
 %%Papers referentes a por qué, limitaciones, etc. Aquí va el paper de sensors
 \cite{mcgarry_hybrid_1999} theorized about the potential benefits of combining symbolic and subsymbolic systems, represented by rule-based systems and neural networks, respectively. According to \cite{mcgarry_hybrid_1999}: ``\textit{The ability of neural networks to perform tasks that would otherwise prove difficult or intractable to symbolic computing systems is now recognized}". This statement illustrates the main claim behind neurosymbolic systems: combining the benefits of symbolic and subsymbolic models such that the resulting hybrid system enables the solution of tasks that can not be solved by just one of the kinds. 
 
@@ -133,7 +133,7 @@ All proposals used the KB when building the predictive model, thus successfully 
 
 %Después de nuestra referencia, el resto
 
-\subsection{Design}
+\subsection{Design}\label{2_sec:subsec:design}
 %Papers de boxología
 \cite{mcgarry_hybrid_1999} is one of the first works to draw the limitations of neurosymbolic models, focusing on the integration of neural networks and rule-based systems. According to this work, the key features a neurosymbolic system should present are: i) the ability to reason with noisy and incomplete data, ii) learning incrementally from new experience, iii) generalize and explain the chain of reasoning. %%LUEGO ESTO SE EXTIENDE
 
@@ -174,7 +174,7 @@ Some works focus on the visual representation of neurosymbolic systems via desig
 
 %%Modelos hibridos, por que se reemplazan unos a otros, beneficios, aproximaciones, clasificaciones dentro de este marco. 
 
-\subsection{Categorization}
+\subsection{Categorization}\label{2_sec:subsec:categorization}
 The neurosymbolic classification framework proposed by \cite{medsker2020models} is one of the first efforts of categorizing neurosymbolic hybrid models under a unified framework. Five integration strategies are defined from a practical point of view based on the interaction degree, from fully independent to fully integrated: stand-alone, transformational, loose coupling, tight coupling, and fully integrated. This categorization does not model the input and output representations employed by each category, as well as the order in which the symbolic and connectionist modules are arranged.
 
 
