--- a/3_objectives/objectives.tex
+++ b/3_objectives/objectives.tex
@@ -37,3 +37,5 @@ TBD
 % 2. Método de inicialización basado en semántica para modelos de KGE
 % 3. Metodo de introduccion de DL a KBS
 % 4. Framework modular y adaptable a diferentes entornos de CBR mejorado con DL para la generacion de documentos.
+
+%%RESEARCH METHODOLOGY
