--- a/4_kbsintegrationdl/kbsintegrationdl.tex
+++ b/4_kbsintegrationdl/kbsintegrationdl.tex
@@ -32,7 +32,7 @@ In this scenario, the DL model plays the primary role, while the KBS plays the s
     \end{enumerate}
 \paragraph{Considerations}
 \begin{enumerate} [start=1,label={\bfseries C\arabic*.}]
-    \item \label{kbsintrodl_C_domain} \textbf{Application domain.} The conducted systematic review on neurosymbolic models in the ambient intelligence domain \citep{amador_systematic_review_2019}  showcased an existing bias in the employed reasoning models according to their application. Complex and opaque approaches were selected in domains where their worst-case scenario impact was low (i.e. housing), while fully expressive and interpretable models were considerably favoured in human-dominated areas (i.e, healthcare). Therefore, in this scenario where the DL model is the primary, it must be studied whether the application domain strictly requires from human understandability. Even though the introduction of KBS into DL models may reduce its opacity, it may not be sufficient to fully comprehend the inference process of the model. 
+    \item \label{kbsintrodl_C_domain} \textbf{Application domain.} Table \ref{tab:sensors_reasoning} showcased an existing bias in the employed reasoning models according to their application. Complex and opaque approaches were selected in domains where their worst-case scenario impact was low (i.e. housing), while fully expressive and interpretable models were considerably favoured in human-dominated areas (i.e, healthcare). Therefore, in this scenario where the DL model is the primary, it must be studied whether the application domain strictly requires from human understandability. Even though the introduction of KBS into DL models may reduce its opacity, it may not be sufficient to fully comprehend the inference process of the model. 
     
     \item  \label{kbsintrodl_C_data} \textbf{Data availability.} As stated in \ref{kbsintrodl_L_data_hungry}, data availability is one of the main bottlenecks of DL models. This issue may be alleviated by the introduction of a KBS model. In those scenarios where the KBS model is already trained, data availability may not be an issue. However, if the KBS model needs to be trained before being integrated within the DL model, there must exists valid data to build the KBS model. Data availability for KBS model training must then be ensured beforehand.
     
@@ -102,7 +102,7 @@ Even though the introduction of ontological information solves the issue of OOKB
     \label{fig:semantic_based_initialization}
 \end{figure}
 
-\paragraph{Theoretical Background.} \label{subsec:s4_theoretical_back}
+\subsubsection{Theoretical Background.} \label{subsec:s4_theoretical_back}
 As previously described, the purpose of KGE models is to subsymbollically represent the knowledge encoded in the KG, associating each entity and relation with a unique representation. One of the key features of the generated embeddings is that elements representing similar concepts must lead to similar encodings. From a technical standpoint, this constraint implies that if a pair of elements are conceptually similar, their corresponding embeddings should be close in the embedding distance. KGE models use specific scoring functions to ensure this restriction is met. While scoring functions vary amongst KGE models, two main categories can be defined: translational and bilinear. 
 
 \begin{figure}[t!]
@@ -135,7 +135,7 @@ Bilinear models compute the plausibility of a given fact from the latent semanti
 % Figure \ref{fig:overview} showcases the proposed incremental six-step procedure conducted to initialize and reason over OOKB entities. 
 % \elvitodo{A lo mejor esa figura se podría modernizar, que está fea} These steps can be categorized into three phases: entity information retrieval, embedding generation and performance evaluation.
 
-\paragraph{Ontology Retrieval.} \label{subsec:s4_onto_retrieval}
+\subsubsection{Ontology Retrieval.} \label{subsec:s4_onto_retrieval}
 Opposite to the volatility of KGs, ontologies provide stable, general information. Their role in the generation of KGs is crucial, but their application scope is usually limited to the introduction and creation of new elements of the graph. The information encoded in ontologies can be particularly beneficial for KGC, as they provide explicit restrictions about the type of entities featured in each relation, as well as additional information that can boost the inference process.
 
 Ontologies comprise the following parts: individuals, classes, properties, relations, function terms, restrictions, rules, axioms, and events. Only individuals (or entities in the context of KGs), relations, and properties are considered by KGE models for the generation of representations. Therefore, a substantial number of components that could improve the final quality of the embeddings is dismissed.
@@ -148,7 +148,7 @@ Restrictions are also closely related with KGEs, as relation representations enc
 
 Phase 1 of Figure \ref{fig:semantic_based_initialization} illustrates two different available paths for ontology retrieval: KG dumps or SPARQL queries. Currently, most of the publicly available KGs provide their data dumps, which includes not only the KG facts, but its ontology file along with extra documentation. Every entity and relation encoded in the KG is explicitly related to its corresponding ontological information, which reduces the retrieval time. Data dumps usually come compressed in a single file that can scale up to several terabytes, which can be undesirable in terms of computational resources. KGs usually provide a SPARQL endpoint, which enables information retrieval via queries. This approach is more efficient, as fewer resources are required and the target information can be retrieved directly with a single query. Nonetheless, using SPARQL queries may be discouraged in cases where the KG has a large size or if the number of SPARQL queries is elevated. 
 
-\paragraph{Entity Knowledge Encoding.}\label{subsec:s4_entity_encode}
+\subsubsection{Entity Knowledge Encoding.}\label{subsec:s4_entity_encode}
 The first phase of the proposed initialization focuses on obtaining the ontological information required to categorize each entity. While the existing OOKB entity reasoning approaches presented in Section \ref{4_sec:ontointro_kgc} are capable of generating highly representative embeddings, these representations lack any semantic information about the entity itself. Semantic information is highly relevant in this context, as it enriches the entity embeddings with an additional level of knowledge that can not be inferred otherwise. Despite this fact, most KGE models still rely on random initialization. 
 
 One-hot vectors are an easy and straightforward replacement for random initialization. In this encoding, each entity is embedded as a vector of dimension $N$, where $N$ is the total number of entities. For every entity, a single vector can be created composed entirely of zeros except for a single one value in a given position, which is unique to each entity. While this encoding may be suitable for small KGs, it cannot be applied to large inputs, as the dimension of the embedding grows linearly with the size of the KG. Moreover, zero-valued initializations can hinder the convergence of the model to its optimal solution, and they do not encode semantic information about the entity.
@@ -165,7 +165,7 @@ In the case of relations, matrices can be used for restriction encoding. Each re
 
 
 
-\paragraph{Embedding Composition.} \label{subsec:s4_embedding_compo}
+\subsubsection{Embedding Composition.} \label{subsec:s4_embedding_compo}
 In this stage, semantic and ontological information are combined to generate the initial value of the entity, as shown in Figure \ref{fig:semantic_based_initialization}. First, the embeddings of the ontological information about the entity are flattened into a single representation. In the context of class hierarchies, an entity can belong to several different classes, each with a unique representation. Hence, the embeddings of the entity classes must be combined into a single embedding. Different vector composition techniques can be used for this task. Averaging all class embeddings is one potential solution, although this approach does not encode the hierarchical information of the ontology classes. Weighted average can be used instead, potentially introducing the hierarchical properties of the ontology in the final representation.
 
 As stated in the previous phase, the encoding method must be aligned with the target component of the KG. If the ontological information is embedded alongside the KGE, then the encoding method must be compliant with the dimension restrictions of the model. While in this initialization the focus is on entity embeddings, the same restriction applies for relations. Three composition procedures can be employed to combine the ontological information alongside the embeddings of the KGE model:
@@ -241,7 +241,7 @@ Triple classification is used to evaluate  the semantic-based initialization. Th
 
 Semantic-based initialization is evaluated following an incremental approach. First, simple entity initialization is performed, replacing random initialization with word embedding based initialization. Simple entity initialization is then extended to include ontological information, which is embedded alongside the entities. Finally, semantic-based initialization is evaluated for OOKB entity reasoning.
 
-\paragraph{Simple Entity Initialization.}
+\subsubsection{Simple Entity Initialization.}
 
 \begin{table} 
 \centering
@@ -250,18 +250,18 @@ Semantic-based initialization is evaluated following an incremental approach. Fi
 \cline{2-7}
                                                                 & \multicolumn{3}{c|}{FB13} & \multicolumn{3}{c|}{WN11} \\ \cline{2-7} 
                                                                 & TCAP  & Recall & F1 Score & TCAP  & Recall & F1 Score \\ \hline
-\multicolumn{1}{|l|}{\textit{ComplEx}}                          & 0,78  & 0,65   & 0,68     & 0,71  & 0,58   & 0,62     \\
-\multicolumn{1}{|l|}{\textit{CompEx + SEI}}   & 0,76  & 0,64   & 0,67     & 0,76  & 0,6    & 0,64     \\ \hline
-\multicolumn{1}{|l|}{\textit{DistMult}}                         & 0,71  & 0,61   & 0,64     & 0,68  & 0,58   & 0,61     \\
-\multicolumn{1}{|l|}{\textit{DistMult + SEI}} & 0,71  & 0,61   & 0,64     & 0,68  & 0,58   & 0,61     \\ \hline
-\multicolumn{1}{|l|}{\textit{TransE}}                           & 0,72  & 0,58   & 0,62     & 0,82  & 0,65   & 0,69     \\
-\multicolumn{1}{|l|}{\textit{TransE + SEI}}   & 0,72  & 0,58   & 0,62     & 0,83  & 0,65   & 0,69     \\ \hline
-\multicolumn{1}{|l|}{\textit{ANALOGY}}                          & 0,65  & 0,52   & 0,58     & 0,67  & 0,58   & 0,59     \\
-\multicolumn{1}{|l|}{\textit{ANALOGY + SEI}}  & 0,68  & 0,58   & 0,61     & 0,68  & 0,56   & 0,6      \\ \hline
-\multicolumn{1}{|l|}{\textit{SimplE}}                           & 0,77  & 0,65   & 0,67     & 0,48  & 0,49   & 0,49     \\
-\multicolumn{1}{|l|}{\textit{SimplE + SEI}}   & 0,74  & 0,64   & 0,67     & 0,6   & 0,53   & 0,55     \\ \hline
+\multicolumn{1}{|l|}{\textit{ComplEx}}                          & 0.78  & 0.65   & 0.68     & 0.71  & 0.58   & 0.62     \\
+\multicolumn{1}{|l|}{\textit{CompEx + SEI}}   & 0.76  & 0.64   & 0.67     & 0.76  & 0.6    & 0.64     \\ \hline
+\multicolumn{1}{|l|}{\textit{DistMult}}                         & 0.71  & 0.61   & 0.64     & 0.68  & 0.58   & 0.61     \\
+\multicolumn{1}{|l|}{\textit{DistMult + SEI}} & 0.71  & 0.61   & 0.64     & 0.68  & 0.58   & 0.61     \\ \hline
+\multicolumn{1}{|l|}{\textit{TransE}}                           & 0.72  & 0.58   & 0.62     & 0.82  & 0.65   & 0.69     \\
+\multicolumn{1}{|l|}{\textit{TransE + SEI}}   & 0.72  & 0.58   & 0.62     & 0.83  & 0.65   & 0.69     \\ \hline
+\multicolumn{1}{|l|}{\textit{ANALOGY}}                          & 0.65  & 0.52   & 0.58     & 0.67  & 0.58   & 0.59     \\
+\multicolumn{1}{|l|}{\textit{ANALOGY + SEI}}  & 0.68  & 0.58   & 0.61     & 0.68  & 0.56   & 0.6      \\ \hline
+\multicolumn{1}{|l|}{\textit{SimplE}}                           & 0.77  & 0.65   & 0.67     & 0.48  & 0.49   & 0.49     \\
+\multicolumn{1}{|l|}{\textit{SimplE + SEI}}   & 0.74  & 0.64   & 0.67     & 0.6   & 0.53   & 0.55     \\ \hline
 \end{tabular}}
-\caption{Triple classification average precision, recall, and F1 score with and without entity initialization (marked as +SEI)}
+\caption{Triple classification average precision. recall. and F1 score with and without entity initialization (marked as +SEI)}
 \label{tab:exp_entity_init}
 \end{table}
 
@@ -271,7 +271,7 @@ The selected Word2Vec model provides 300-dimension representations. The KGE mode
 
 Table \ref{tab:exp_entity_init} reports the TCAP, F1 score and recall for each model with and without simple entity initialization (marked as + SEI).
 
-\paragraph{Semantic-Based Initialization.}
+\subsubsection{Semantic-Based Initialization.}
 The class hierarchy of entities is selected as ontological information in the second experimentation stage, as it can be easily integrated within the previously initialized entity embeddings. SPARQL endpoints are used to retrieve the class hierarchy of each entity. For the entities in WN11, its homonym ontology is applied, which splits the entities into four classes according to their word type: nouns, adjectives, verbs and adverbs. For FB13, two different ontologies are considered. Freebase is currently integrated within the Google Knowledge Graph, thus inheriting its ontology. The GKG API was employed to retrieve the classes of each FB13 entity, identifying a total of 64 classes. The root class \textit{Thing} is assigned to those entities where no leaf classes are specified.
 
 An additional ontology is considered for FB13 to study the existing dependency between the complexity of the class hierarchy and the results achieved by the KGE model. DBpedia ontology is selected, having a total number of 685 different classes. The DBpedia SPARQL endpoint is used to retrieve the class hierarchy of each entity. As this ontology is external to FB13, each entity's class hierarchy cannot be directly obtained. The SPARQL query in Listing \ref{lst:sparql} is executed for each entity, exchanging the label value according to each entity $e \in \mathcal{E}$. The class hierarchy of each entity is saved in a dictionary of tuples of the form $(entity, [classes])$. From the total 685 classes of the DBpedia ontology, only 197 are featured in the class hierarchies of the entities in FB13. As in the previous case, the root class \textit{Thing} is assigned to those entities where no class information is available.
@@ -297,30 +297,30 @@ For each $e \in \mathcal{E}$, its list of classes $C$ is obtained. Then, for eac
 \cline{2-7}
 \textit{}                                                                & \multicolumn{3}{c|}{FB13} & \multicolumn{3}{c|}{WN11} \\ \cline{2-7} 
 \textit{}                                                                & TCAP  & Recall & F1 Score & TCAP  & Recall & F1 Score \\ \hline
-\multicolumn{1}{|l|}{\textit{ComplEx + DBOnt}}                           & 0,65  & 0,6    & 0,62     & -     & -      & -        \\
-\multicolumn{1}{|l|}{\textit{ComplEx + GKGOnt}}                          & 0,74  & 0,62   & 0,65     & -     & -      & -        \\
-\multicolumn{1}{|l|}{\textit{ComplEx + WNOnt}}                           & -     & -      & -        & 0,75  & 0,58   & 0,64     \\
-\multicolumn{1}{|l|}{\textit{CompEx + DBOnt + SEI}}    & 0,73  & 0,62   & 0,65     & -     & -      & -        \\
-\multicolumn{1}{|l|}{\textit{ComplEx + GKGOnt + SEI}}  & 0,73  & 0,61   & 0,63     & -     & -      & -        \\
-\multicolumn{1}{|l|}{\textit{ComplEx + WNOnt + SEI}}   & -     & -      & -        & 0,76  & 0,6    & 0,65     \\ \hline
-\multicolumn{1}{|l|}{\textit{DistMult + DBOnt}}                          & 0,71  & 0,62   & 0,64     & -     & -      & -        \\
-\multicolumn{1}{|l|}{\textit{DistMult + GKGOnt}}                         & 0,74  & 0,62   & 0,65     & -     & -      & -        \\
-\multicolumn{1}{|l|}{\textit{DistMult + WNOnt}}                          & -     & -      & -        & 0,65  & 0,57   & 0,6      \\
-\multicolumn{1}{|l|}{\textit{DistMult + DBOnt + SEI}}  & 0,71  & 0,62   & 0,64     & -     & -      & -        \\
-\multicolumn{1}{|l|}{\textit{DistMult + GKGOnt + SEI}} & 0,75  & 0,61   & 0,62     & -     & -      & -        \\
-\multicolumn{1}{|l|}{\textit{DistMult + WNOnt + SEI}}  & -     & -      & -        & 0,75  & 0,6    & 0,64     \\ \hline
-\multicolumn{1}{|l|}{\textit{ANALOGY + DBOnt}}                           & 0,67  & 0,6    & 0,62     & -     & -      & -        \\
-\multicolumn{1}{|l|}{\textit{ANALOGY + GKGOnt}}                          & 0,68  & 0,6    & 0,63     & -     & -      & -        \\
-\multicolumn{1}{|l|}{\textit{ANALOGY + WNOnt}}                           & -     & -      & -        & 0,7   & 0,58   & 0,6      \\
-\multicolumn{1}{|l|}{\textit{ANALOGY + DBOnt + SEI}}   & 0,67  & 0,6    & 0,62     & -     & -      & -        \\
-\multicolumn{1}{|l|}{\textit{ANALOGY + GKGOnt + SEI}}  & 0,68  & 0,6    & 0,62     & -     & -      & -        \\
-\multicolumn{1}{|l|}{\textit{ANALOGY + WNOnt + SEI}}   & -     & -      & -        & 0,64  & 0,55   & 0,59     \\ \hline
-\multicolumn{1}{|l|}{\textit{SimplE + DBOnt}}                            & 0,63  & 0,6    & 0,61     & -     & -      & -        \\
-\multicolumn{1}{|l|}{\textit{SimplE + GKGOnt}}                           & 0,76  & 0,63   & 0,66     & -     & -      & -        \\
-\multicolumn{1}{|l|}{\textit{SimplE + WNOnt}}                            & -     & -      & -        & 0,6   & 0,55   & 0,57     \\
-\multicolumn{1}{|l|}{\textit{SimplE + DBOnt + SEI}}    & 0,66  & 0,6    & 0,62     & -     & -      & -        \\
-\multicolumn{1}{|l|}{\textit{SimplE + GKGOnt + SEI}}   & 0,74  & 0,61   & 0,65     & -     & -      & -        \\
-\multicolumn{1}{|l|}{\textit{SimplE + WNOnt + SEI}}    & -     & -      & -        & 0,62  & 0,54   & 0,58     \\ \hline
+\multicolumn{1}{|l|}{\textit{ComplEx + DBOnt}}                           & 0.65  & 0.6    & 0.62     & -     & -      & -        \\
+\multicolumn{1}{|l|}{\textit{ComplEx + GKGOnt}}                          & 0.74  & 0.62   & 0.65     & -     & -      & -        \\
+\multicolumn{1}{|l|}{\textit{ComplEx + WNOnt}}                           & -     & -      & -        & 0.75  & 0.58   & 0.64     \\
+\multicolumn{1}{|l|}{\textit{CompEx + DBOnt + SEI}}    & 0.73  & 0.62   & 0.65     & -     & -      & -        \\
+\multicolumn{1}{|l|}{\textit{ComplEx + GKGOnt + SEI}}  & 0.73  & 0.61   & 0.63     & -     & -      & -        \\
+\multicolumn{1}{|l|}{\textit{ComplEx + WNOnt + SEI}}   & -     & -      & -        & 0.76  & 0.6    & 0.65     \\ \hline
+\multicolumn{1}{|l|}{\textit{DistMult + DBOnt}}                          & 0.71  & 0.62   & 0.64     & -     & -      & -        \\
+\multicolumn{1}{|l|}{\textit{DistMult + GKGOnt}}                         & 0.74  & 0.62   & 0.65     & -     & -      & -        \\
+\multicolumn{1}{|l|}{\textit{DistMult + WNOnt}}                          & -     & -      & -        & 0.65  & 0.57   & 0.6      \\
+\multicolumn{1}{|l|}{\textit{DistMult + DBOnt + SEI}}  & 0.71  & 0.62   & 0.64     & -     & -      & -        \\
+\multicolumn{1}{|l|}{\textit{DistMult + GKGOnt + SEI}} & 0.75  & 0.61   & 0.62     & -     & -      & -        \\
+\multicolumn{1}{|l|}{\textit{DistMult + WNOnt + SEI}}  & -     & -      & -        & 0.75  & 0.6    & 0.64     \\ \hline
+\multicolumn{1}{|l|}{\textit{ANALOGY + DBOnt}}                           & 0.67  & 0.6    & 0.62     & -     & -      & -        \\
+\multicolumn{1}{|l|}{\textit{ANALOGY + GKGOnt}}                          & 0.68  & 0.6    & 0.63     & -     & -      & -        \\
+\multicolumn{1}{|l|}{\textit{ANALOGY + WNOnt}}                           & -     & -      & -        & 0.7   & 0.58   & 0.6      \\
+\multicolumn{1}{|l|}{\textit{ANALOGY + DBOnt + SEI}}   & 0.67  & 0.6    & 0.62     & -     & -      & -        \\
+\multicolumn{1}{|l|}{\textit{ANALOGY + GKGOnt + SEI}}  & 0.68  & 0.6    & 0.62     & -     & -      & -        \\
+\multicolumn{1}{|l|}{\textit{ANALOGY + WNOnt + SEI}}   & -     & -      & -        & 0.64  & 0.55   & 0.59     \\ \hline
+\multicolumn{1}{|l|}{\textit{SimplE + DBOnt}}                            & 0.63  & 0.6    & 0.61     & -     & -      & -        \\
+\multicolumn{1}{|l|}{\textit{SimplE + GKGOnt}}                           & 0.76  & 0.63   & 0.66     & -     & -      & -        \\
+\multicolumn{1}{|l|}{\textit{SimplE + WNOnt}}                            & -     & -      & -        & 0.6   & 0.55   & 0.57     \\
+\multicolumn{1}{|l|}{\textit{SimplE + DBOnt + SEI}}    & 0.66  & 0.6    & 0.62     & -     & -      & -        \\
+\multicolumn{1}{|l|}{\textit{SimplE + GKGOnt + SEI}}   & 0.74  & 0.61   & 0.65     & -     & -      & -        \\
+\multicolumn{1}{|l|}{\textit{SimplE + WNOnt + SEI}}    & -     & -      & -        & 0.62  & 0.54   & 0.58     \\ \hline
 \end{tabular}
 }
 \caption{Triple classification average precision per instance model with and without entity initialization and ontology introduction. For Freebase, two different ontologies are used: DBOnt refers to the DBpedia Ontology, and GKGOnt to the Google Knowledge Graph Ontology.}
@@ -329,7 +329,7 @@ For each $e \in \mathcal{E}$, its list of classes $C$ is obtained. Then, for eac
 
 This second experimentation stage is evaluated only on the bilinear models. Table \ref{tab:exp_ont_intro} reports the metrics achieved by each model on each ontology.
 
-\paragraph{OOKB Entity Reasoning.}
+\subsubsection{OOKB Entity Reasoning.}
 The third and final experimentation stage evaluates the capacity of the proposed semantic-based initialization to reason over facts containing OOKB entities. 1500 entities are randomly sampled from the total entity set $\mathcal{E}$ of both FB13 and WN11 to generate the OOKB entity set. All facts containing exactly one OOKB are withdrawn from the training, validation, and test sets, generating a new set of facts composed by one known and one OOKB entity. This ensures that OOKB entities remain entirely anonymous to the model. Facts containing two OOKB entities are not considered.
 
 \begin{table} 
@@ -337,10 +337,10 @@ The third and final experimentation stage evaluates the capacity of the proposed
 \begin{tabular}{l|c|c|}
 \cline{2-3}
 \textit{}                                       & FB13    & WN11    \\ \hline
-\multicolumn{1}{|l|}{\textit{training facts}}   & 300.134 & 103.789 \\ \hline
-\multicolumn{1}{|l|}{\textit{validation facts}} & 11.366  & 4.803   \\ \hline
-\multicolumn{1}{|l|}{\textit{test facts}}       & 45.793  & 19.364  \\ \hline
-\multicolumn{1}{|l|}{\textit{OOKB facts}}      & 34.319  & 19.722  \\ \hline
+\multicolumn{1}{|l|}{\textit{training facts}}   & 300,134 & 103,789 \\ \hline
+\multicolumn{1}{|l|}{\textit{validation facts}} & 11,366  & 4,803   \\ \hline
+\multicolumn{1}{|l|}{\textit{test facts}}       & 45,793  & 19,364  \\ \hline
+\multicolumn{1}{|l|}{\textit{OOKB facts}}      & 34,319  & 19,722  \\ \hline
 \end{tabular}
 \caption{Number of examples per set and dataset. All training facts are positive, whereas validation, test, and OOKB facts contain an equal proportion of positive and negative examples.}
 \label{tab:OOKB_proportions}
@@ -359,14 +359,14 @@ In this evaluation, random initialization is not considered, as the introduction
                                                  & \multicolumn{6}{c|}{FB13}                                      \\ \cline{2-7} 
                                                  & \multicolumn{3}{c|}{Known set} & \multicolumn{3}{c|}{OOKB set} \\ \cline{2-7} 
 \textit{}                                        & TCAP   & Recall   & F1 Score   & TCAP   & Recall   & F1 Score  \\ \hline
-\multicolumn{1}{|l|}{\textit{ComplEx + DBOnt}}   & 0,75   & 0,63     & 0,66       & 0,63   & 0,5      & 0,55      \\
-\multicolumn{1}{|l|}{\textit{ComplEx + GKGOnt}}  & 0,72   & 0,61     & 0,65       & 0,75   & 0,58     & 0,65      \\ \hline
-\multicolumn{1}{|l|}{\textit{DistMult + DBOnt}}  & 0,76   & 0,62     & 0,65       & 0,6    & 0,6      & 0,59      \\
-\multicolumn{1}{|l|}{\textit{DistMult + GKGOnt}} & 0,62   & 0,6      & 0,6        & 0,71   & 0,5      & 0,53      \\ \hline
-\multicolumn{1}{|l|}{\textit{ANALOGY  + DBOnt}}  & 0,74   & 0,63     & 0,65       & 0,6    & 0,48     & 0,62      \\
-\multicolumn{1}{|l|}{\textit{ANALOGY + GKGOnt}}  & 0,73   & 0,62     & 0,66       & 0,74   & 0,55     & 0,53      \\ \hline
-\multicolumn{1}{|l|}{\textit{SimplE + DBOnt}}    & 0,69   & 0,6      & 0,63       & 0,61   & 0,47     & 0,53      \\
-\multicolumn{1}{|l|}{\textit{SimplE + GKGOnt}}   & 0,77   & 0,63     & 0,67       & 0,71   & 0,54     & 0,6   \\
+\multicolumn{1}{|l|}{\textit{ComplEx + DBOnt}}   & 0.75   & 0.63     & 0.66       & 0.63   & 0.5      & 0.55      \\
+\multicolumn{1}{|l|}{\textit{ComplEx + GKGOnt}}  & 0.72   & 0.61     & 0.65       & 0.75   & 0.58     & 0.65      \\ \hline
+\multicolumn{1}{|l|}{\textit{DistMult + DBOnt}}  & 0.76   & 0.62     & 0.65       & 0.6    & 0.6      & 0.59      \\
+\multicolumn{1}{|l|}{\textit{DistMult + GKGOnt}} & 0.62   & 0.6      & 0.6        & 0.71   & 0.5      & 0.53      \\ \hline
+\multicolumn{1}{|l|}{\textit{ANALOGY  + DBOnt}}  & 0.74   & 0.63     & 0.65       & 0.6    & 0.48     & 0.62      \\
+\multicolumn{1}{|l|}{\textit{ANALOGY + GKGOnt}}  & 0.73   & 0.62     & 0.66       & 0.74   & 0.55     & 0.53      \\ \hline
+\multicolumn{1}{|l|}{\textit{SimplE + DBOnt}}    & 0.69   & 0.6      & 0.63       & 0.61   & 0.47     & 0.53      \\
+\multicolumn{1}{|l|}{\textit{SimplE + GKGOnt}}   & 0.77   & 0.63     & 0.67       & 0.71   & 0.54     & 0.6   \\
 \hline
 \end{tabular}}
 
@@ -394,7 +394,7 @@ In this evaluation, random initialization is not considered, as the introduction
 
 \subsection{Result Analysis}\label{4_sec:results}
 %%AÑADIR PERFORMANCE ASSESSMENT AQUI
-\paragraph{Simple Entity Initialization.}
+\subsubsection{Simple Entity Initialization.}
 As reported in Table \ref{tab:exp_entity_init}, simple entity initialization induces a slight improvement in most of the studied models. Initialization using semantically enriched representations, alongside with the information provided by the training facts, leads to more expressive representations. This improvement on the final expressivity of the embeddings is reflected in the results, as evidenced by the TCAP increment in ComplEx and SimplE in WN11. In the case of SimplE, the improvement is particularly remarkable, as TCAP increases from 48\% up to 62\%. In ComplEx, the improvement is close to 4.5\%, which is less noticeable but still significant. In FB13, the results remain fairly similar with and without initialization across the reported metrics.
 
 \begin{figure}[t]
@@ -409,7 +409,7 @@ In TransE, no improvement is observed in neither of the studied datasets. This i
 
 Besides the improvement in terms of metrics, simple entity initialization has a direct benefit in the training of the KGE models, easing their convergence and reducing the number of iterations. Figure \ref{fig:convergence} evidences that simple entity initialization makes KGE models converge to a stable solution faster than those using random initialization. This statement does not hold in the case of TransE, since the convergence rate of both initialization options remains almost identical.
 
-\paragraph{Semantic-Based Initialization.}
+\subsubsection{Semantic-Based Initialization.}
 
 \begin{figure}[t]
     \centering
@@ -423,7 +423,7 @@ According to the results reported in Table \ref{tab:exp_ont_intro}, the applicat
 In FB13, although less noticeable, there is still an improvement in several of the reported KGE models. In this scenario, entity initialization does not further enhance the results introduced by adding ontological information to the random initialization. This may be related to the nature of each dataset, as WN11 models semantic relations between words, and can therefore benefit from the inclusion of explicit semantic information. Regarding the ontology choice, it can not be ascertained whether the complexity of the ontology directly impacts the results, as both ontologies produce similar results. Nonetheless, the complexity of the ontology could play a key role in the link prediction task, as it would significantly reduce the dimension of the candidate pool in tasks such as subject or object prediction.
 
 
-\paragraph{OOKB Entity Reasoning.}
+\subsubsection{OOKB Entity Reasoning.}
 Once proven that semantic-based initialization enhances the performance of KGE models, the extent of this proposal is evaluated over facts including OOKB entities. As evidenced by the results reported in Table \ref{tab:exp_entity_init}, initializing entities with word embeddings increases the specific knowledge about the entities, providing information that may not be inferred otherwise. Additionally, the inclusion of ontological information improves the generalization aspect of the model, enabling the inference of general restrictions about the relations, which directly translates into an accuracy improvement. Considering these two aspects, the fitness of semantic-based initialization for OOKB entity reasoning is evaluated (Table \ref{tab:OOKB_exp})
 
 \begin{figure}[t!]
@@ -438,7 +438,7 @@ In WN11, while semantic-based initialization considerably enhances the models' p
 
 Table \ref{tab:ookb_fb} shows that the results achieved in FB13 for the OOKB test set are similar to those obtained for the fully-known test set, except for DistMult. This phenomenon is related to the type of information modelled in FB13, as the restrictions associated with the relations are closely related to the classes of entities. This statement is further validated by the results in Figure \ref{fig:fb13_tcap}, where the average precision in half of the studied relations reaches more than 70\%. These results show a direct correlation between the homogeneity of the subject and object classes of the relation and the TCAP obtained. Therefore, in relations such as \textit{children}, \textit{parents} or \textit{spouse} that always relate two entities of type \textit{Person}, the precision is always close to 60\% as restrictions are easily inferred. Similarly, the relations \textit{location} and \textit{nationality} also achieve a remarkable performance in terms of precision, even though the results fluctuate across the different models. In both relations, the models employing the GKG ontology achieve better results than those using the DBpedia ontology. This is a direct consequence of the fine-graining level provided by the DBpedia ontology for the general class \textit{Place}, where more than 170 subclasses are identified.
 
-\paragraph{Performance Analysis.}
+\subsubsection{Performance Analysis.}
 %%AQUI VA LO DEL PERFORMANCE ANALYSIS COMO SU NOMBRE INDICA
 In addition to improving the transferability, OOKB reasoning via semantic-based initialization can be used to assess the robustness of the KGE model. After evaluating the semantically initialized model on both the fully-known and the OOKB test set, their metrics can be compared. Being $TCAP_{FK}$ and $TCAP_{OOKB}$ the TCAP values of the fully-known and OOKB test sets, respectively, three scenarios can be identified:
 \begin{itemize}
